--- a/calculator.html
+++ b/calculator.html
@@ -8,16 +8,16 @@
     <script src="calc.js"></script>
 </head>
 <body>
-    <h1>Tips for escaping Twisteds</h1>
+    <h1>Calculator</h1>
     <header>
         <a href="./index.html">Home |</a>
         <a href="./escaping.html">Escaping Twisteds |</a>
         <a href="./heals.html">Heals |</a>
         <!-- I will put page links here-->
     </header>
-    <div>
+    <div class="but">
         <button onclick="twisteds()">Twisteds</button>
-        <input placeholder="not gonna use for now">
+        <button onclick="revtwisteds()">Reverse Twisteds</button>
     </div>
 </body>
 </html>
