--- a/escaping.html
+++ b/escaping.html
@@ -21,29 +21,30 @@
     </header>
     <div>
         <h2>General tips:</h2>
-        <p>One of the most important things to learn before I tell you how to absolutely destroy twisted shrimpo’s and his bros ankles is stamina management and awareness. 
+        <p>One of the most important things to learn before I tell you how to absolutely destroy Twisted shrimpo’s and his bros ankles is stamina management and awareness. 
 
             You do NOT wanna be wasting half your stam running across the map. Ideally, you want to be using a max of 25 - 35 stam to traverse the map (depending on what toons you’re playing). Walking a lot of the distance may seem slow, but you’re a lot slower when you’re dead, so deal with it. 
             <br/><br/>
-            Another very important thing is awareness. You cannot escape a twisted if you don’t know where they are, or god forbid, not even know they see you. You want to be playing with audio (yes, believe or not, simulating being deaf is not optimal), and keeping an eye on the bottom left, where you wanna watch out for the actual eye.
+            Another very important thing is awareness. You cannot escape a Twisted if you don’t know where they are, or god forbid, not even know they see you. You want to be playing with audio (yes, believe or not, simulating being deaf is not optimal), and keeping an eye on the bottom left, where you wanna watch out for the actual eye.
             
-            Always attempt to know in what general area a twisted is in, or if you know they’re near you, keep an eye on them. DO NOT PANIC IF A TWISTED SEES YOU ISTG. Most of the time, it’s a bitter piece of seafood, not the bomb squad.
+            Always attempt to know in what general area a Twisted is in, or if you know they’re near you, keep an eye on them. DO NOT PANIC IF A TWISTED SEES YOU ISTG. Most of the time, it’s a bitter piece of seafood, not the bomb squad.
             <br/>
             <br/>
             More tips:
 
-            When you're doing a machine, plan out an escape route. You might be like "Why? Can't I just run backwards?", and the answer to that is no. Planning out your escape route is important because if you get spotted and you can't see the twisted you can take the escape route and escape them without even seeing them.
+            When you're doing a machine, plan out an escape route. You might be like "Why? Can't I just run backwards?", and the answer to that is no. Planning out your escape route is important because if you get spotted and you can't see the Twisted you can take the escape route and escape them without even seeing them.
 
             Next tip,
-            LOOK AROUND CORNERS FOR THE LOVE OF GOD
+            LOOK AROUND CORNERS FOR THE LOVE OF GOD.
+            <br/>
             Actually, just look around before you sprint out in the open in general. Look around then sprint, don't sprint then look around.</p>
     </div>
 
     <div>
         <h2>Escaping Twisteds:</h2>
-        <p>Twisteds have something called Line of Sight (LoS). If you're in their LoS, they will spot you.  Conversly, if you get out of their LoS, they will lose interest in you after a certain amount of time. This amount of time is decided by the twisteds attention span. For example, Toodles has a very short attention span, and will almost instantly lose interest in you the second you get out of LoS, while twisteds like Ginger will continue to chase you even after staying out of their LoS for a long time. If you go into their LoS again, their attention span resets.
+        <p>Twisteds have something called Line of Sight (LoS). If you're in their LoS, they will spot you.  Conversly, if you get out of their LoS, they will lose interest in you after a certain amount of time. This amount of time is decided by the Twisteds attention span. For example, Toodles has a very short attention span, and will almost instantly lose interest in you the second you get out of LoS, while Twisteds like Ginger will continue to chase you even after staying out of their LoS for a long time. If you go into their LoS again, their attention span resets.
             <br/><br/>
-            To escape the twisteds, you want to maximize the time you stay out of their LoS. The best way to do this is to run around an object. You basically want to loop around this object, staying out of LoS until they lose interest. You want to stick to this object as close as possible without getting stuck on it.  Twisteds will commonly lose you around corners, so sticking to these objects closely means they have to go around to corner fully to chase you, giving you ample time to get out of their LoS. Be careful though, always keep an eye of the twisted(s) chasing you. Twisteds have a tendency to do a complete 180 after losing interest, potentially causing you to run straight into them again if you don't stop looping in time.</p>
+            To escape the Twisteds, you want to maximize the time you stay out of their LoS. The best way to do this is to run around an object. You basically want to loop around this object, staying out of LoS until they lose interest. You want to stick to this object as close as possible without getting stuck on it.  Twisteds will commonly lose you around corners, so sticking to these objects closely means they have to go around to corner fully to chase you, giving you ample time to get out of their LoS. Be careful though, always keep an eye of the Twisted(s) chasing you. Twisteds have a tendency to do a complete 180 after losing interest, potentially causing you to run straight into them again if you don't stop looping in time.</p>
     </div>
 
     <div class="videoholder">
