--- a/calculator.html
+++ b/calculator.html
@@ -18,6 +18,7 @@
     <div class="but">
         <button onclick="twisteds()">Twisteds</button>
         <button onclick="revtwisteds()">Reverse Twisteds</button>
+        <button onclick="toons()">Toons</button>
     </div>
 </body>
 </html>
