--- a/calculator.html
+++ b/calculator.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css"/>
-    <link rel="icon" type="image/x-icon" href="./icon.webp">
+    <link rel="icon" type="image/x-icon" href="./icon.webp"/>
     <title>Calculator</title>
     <script src="calc.js"></script>
 </head>
