--- a/calculator.html
+++ b/calculator.html
@@ -21,6 +21,7 @@
         <button onclick="revtwisteds()">Reverse Twisteds</button>
         <button onclick="toons()">Toons</button>
         <button onclick="twistedinfo()">Twisteds Info</button>
+        <button onclick="machines()">Machines</button>
     </div>
 </body>
 </html>
